# LO21---sys-expert

./: .gitignore  CMakeLists.txt  Makefile  README.md  graph_example.txt
src/: bc.c  bc.h  inference.c  inference.h  list_proposition.c  list_proposition.h  list_regle.c  list_regle.h  main.c  print.c  print.h  proposition.h  regle.c  regle.h  ui.c  ui.h
